...
              child: Container(
                decoration: BoxDecoration(
                  color: TColor.textbox,
                  borderRadius: BorderRadius.circular(20),
                ),
                child: TextField(
                  key: Key("search"),
                  controller: txtSearch,
                  onChanged: (value) {
                    setState(() {
                      filteredBooks =
                          widget.allBooks.where((book) {
                            final title = book["title"]?.toLowerCase() ?? '';
...
